# libxklavier

./: .cvsignore  .gitignore  ChangeLog  Doxyfile.in  Makefile.am  NEWS  README  RELEASE_NOTES_0_3  RELEASE_NOTES_0_4  RELEASE_NOTES_0_5  RELEASE_NOTES_0_6  RELEASE_NOTES_0_7  RELEASE_NOTES_0_8  RELEASE_NOTES_0_90  RELEASE_NOTES_0_95  RELEASE_NOTES_0_96  RELEASE_NOTES_0_97  RELEASE_NOTES_1_00  RELEASE_NOTES_1_01  RELEASE_NOTES_1_02  RELEASE_NOTES_1_03  autogen.sh  configure.ac  configure.in  libxklavier.pc.in  libxklavier.spec.in
doc/html/: .cvsignore  Makefile.am
doc/reference/: .cvsignore  libxklavier-sections.txt
doc/reference/tmpl/: libxklavier-unused.sgml  xkl_config_item.sgml  xkl_config_rec.sgml  xkl_config_registry.sgml  xkl_engine.sgml  xkl_engine_marshal.sgml  xklavier.sgml  xklavier_private.sgml  xklavier_private_xkb.sgml  xklavier_private_xmm.sgml
libxklavier/: .cvsignore  .gitignore  Makefile.am  libxklavier.public  marshal.list  xkl_config_item.h  xkl_config_rec.h  xkl_config_registry.h  xkl_engine.h  xkl_engine_marshal.c  xkl_engine_marshal.h  xklavier.c  xklavier.h  xklavier_config.c  xklavier_config.h  xklavier_config_i18n.c  xklavier_config_iso.c  xklavier_config_xkb.c  xklavier_config_xmm.c  xklavier_dump.c  xklavier_evt.c  xklavier_evt_xkb.c  xklavier_evt_xmm.c  xklavier_private.h  xklavier_private_xkb.h  xklavier_private_xmm.h  xklavier_props.c  xklavier_toplevel.c  xklavier_util.c  xklavier_xkb.c  xklavier_xmm.c  xklavier_xmm_opts.c
tests/: .cvsignore  .gitignore  .indent.pro  Makefile.am  test_config.c  test_gi.py  test_monitor.c
