SUBDIRS = libxklavier doc tests

config_xml_DATA = xfree86.xml
config_xmldir = $(datadir)/$(PACKAGE)

EXTRA_DIST = libxklavier.spec libxklavier.spec.in \
             autogen.sh \
             CREDITS libxklavier.pc.in gtk-doc.make \
             $(config_xml_DATA)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libxklavier.pc
